# hk-tpdm-traffic-signs-markings

./: .gitignore  README.md  pyproject.toml  start_converter.bat
.claude/: launch.json
.github/workflows/: pages.yml
examples/: no_entry_sign.dxf
scripts/: build_map_data.py  build_map_icons.py  build_site.py  recolor_rm_white.py
site/: index.html  index.json  map.html
site/assets/: app.js  map.css  map.js  style.css
site/dxfs/: RM_1001.dxf  RM_1002.dxf  RM_1003.dxf  RM_1004.dxf  RM_1006.dxf  RM_1007.dxf  RM_1009.dxf  RM_1010.dxf  RM_1011.dxf  RM_1012.dxf  RM_1013.dxf  RM_1016.dxf  RM_1017.dxf  RM_1018.dxf  RM_1019.dxf  RM_1020.dxf  RM_1021.dxf  RM_1022.dxf  RM_1023.dxf  RM_1024.dxf  RM_1025.dxf  RM_1026.dxf  RM_1027.dxf  RM_1028.dxf  RM_1029.dxf  RM_1030.dxf  RM_1031.dxf  RM_1032.dxf  RM_1033.dxf  RM_1034.dxf  RM_1035.dxf  RM_1036.dxf  RM_1037.dxf  RM_1038.dxf  RM_1040.dxf  RM_1041.dxf  RM_1042.dxf  RM_1043.dxf  RM_1044.dxf  RM_1045.dxf  (+1287 more)
site/map-data/: 2277_444.json  2277_445.json  2277_446.json  2278_444.json  2278_445.json  2278_446.json  2278_447.json  2278_448.json  2278_449.json  2278_450.json  2279_444.json  2279_445.json  2279_446.json  2279_447.json  2279_448.json  2279_449.json  2280_443.json  2280_444.json  2280_445.json  2280_446.json  2280_447.json  2280_448.json  2280_449.json  2281_446.json  2281_447.json  2281_448.json  2281_449.json  2281_450.json  2282_444.json  2282_445.json  2282_446.json  2282_447.json  2282_448.json  2282_449.json  2282_450.json  2283_444.json  2283_445.json  2283_446.json  (+24 more)
tests/: test_pipeline.py  test_webapp.py
(+8 files in other folders)
